src/main/java/simsql/runtime/DataFlowParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g 2016-08-03 05:31:18


  package simsql.runtime;

  import java.util.ArrayList;
  import java.util.HashMap;
  import java.util.Map;



import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

/*****************************************************************************
 *                                                                           *
 *  Copyright 2014 Rice University                                           *
 *                                                                           *
 *  Licensed under the Apache License, Version 2.0 (the "License");          *
 *  you may not use this file except in compliance with the License.         *
 *  You may obtain a copy of the License at                                  *
 *                                                                           *
 *      http://www.apache.org/licenses/LICENSE-2.0                           *
 *                                                                           *
 *  Unless required by applicable law or agreed to in writing, software      *
 *  distributed under the License is distributed on an "AS IS" BASIS,        *
 *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. *
 *  See the License for the specific language governing permissions and      *
 *  limitations under the License.                                           *
 *                                                                           *
 *****************************************************************************/
public class DataFlowParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Identifier", "Int", "String", "Boolean", "Float", "WS", "'{'", "'}'", "'leftInput'", "'='", "'rightInput'", "'input'", "'output'", "'operation'", "'inFiles'", "'inAtts'", "'inTypes'", "'hashAtts'", "'typeCode'", "'selection'", "'outAtts'", "'outFile'", "'groupByAtts'", "'aggregates'", "'outerInput'", "'innerInputs'", "'seedAtt'", "'function'", "'functionName'", "'vgInAtts'", "'vgOutAtts'", "'removeDuplicates'", "'isFinal'", "'sortedOn'", "'joinType'", "'rows'", "','", "'('", "')'", "'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'!'", "'null'", "'&&'", "'||'", "'+'", "'-'", "'*'", "'/'"
    };
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int EOF=-1;
    public static final int Int=5;
    public static final int Identifier=4;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__19=19;
    public static final int T__51=51;
    public static final int T__16=16;
    public static final int T__52=52;
    public static final int T__15=15;
    public static final int T__53=53;
    public static final int T__18=18;
    public static final int T__54=54;
    public static final int T__17=17;
    public static final int T__12=12;
    public static final int T__11=11;
    public static final int T__14=14;
    public static final int T__13=13;
    public static final int T__10=10;
    public static final int String=6;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int Float=8;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=9;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int Boolean=7;

    // delegates
    // delegators


        public DataFlowParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DataFlowParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return DataFlowParser.tokenNames; }
    public String getGrammarFileName() { return "/home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g"; }



    	// nothing right now!



    // $ANTLR start "parse"
    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:44:1: parse returns [ArrayList <RelOp> value] : v1= varList (v2= varList )* ;
    public final ArrayList <RelOp> parse() throws RecognitionException {
        ArrayList <RelOp> value = null;

        Map <String, ParsedRHS> v1 = null;

        Map <String, ParsedRHS> v2 = null;


        try {
            // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:45:2: (v1= varList (v2= varList )* )
            // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:45:4: v1= varList (v2= varList )*
            {
            pushFollow(FOLLOW_varList_in_parse48);
            v1=varList();

            state._fsp--;

            value = new ArrayList <RelOp> ();
            								 ParsedRHS whichOne = v1.get ("operation");
            								 if (whichOne == null) {
            									throw new RuntimeException ("Parser: No operation defined for clause!");
            								 } else if (whichOne.getIdentifier ().equals ("join")) {
            									value.add (new JoinOp (v1));
            								 } else if (whichOne.getIdentifier ().equals ("aggregate")) {
                                                value.add (new AggregateOp (v1));
                                             } else if (whichOne.getIdentifier ().equals ("inference")) {
                                                value.add (new InferOp (v1));
                                             } else if (whichOne.getIdentifier ().equals ("vgwrapper")) {
                                                 value.add (new VGWrapperOp (v1));
                                             } else if (whichOne.getIdentifier ().equals ("select")) {
                                                 value.add (new SelectionOp (v1));
                                             } else if (whichOne.getIdentifier ().equals ("tempTable")) {
                                                 value.add (new TempTableOp (v1));
                                             } else if (whichOne.getIdentifier ().equals ("frameOutput")) {
                                                 value.add (new FrameOutputOp (v1));
            								 } else {
            									throw new RuntimeException ("Parser: Got an undefined relational op!");
            								 }
            // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:66:3: (v2= varList )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==10) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:66:5: v2= varList
            	    {
            	    pushFollow(FOLLOW_varList_in_parse62);
            	    v2=varList();

            	    state._fsp--;

            	    whichOne = v2.get ("operation");
            	    								 if (whichOne == null) {
            	    									throw new RuntimeException ("Parser: No operation defined for clause!");
            	    								 } else if (whichOne.getIdentifier ().equals ("join")) {
            	    									value.add (new JoinOp (v2));
            	    								 } else if (whichOne.getIdentifier ().equals ("aggregate")) {
            	                                        value.add (new AggregateOp (v2));
            	                                     } else if (whichOne.getIdentifier ().equals ("inference")) {
            	                                        value.add (new InferOp (v2));
            	                                     } else if (whichOne.getIdentifier ().equals ("vgwrapper")) {
            	                                         value.add (new VGWrapperOp (v2));
            	    								 } else if (whichOne.getIdentifier ().equals ("select")) {
            	                                         value.add (new SelectionOp (v2));
            	                                     } else if (whichOne.getIdentifier ().equals ("tempTable")) {
            	                                         value.add (new TempTableOp (v2));
            	                                     } else if (whichOne.getIdentifier ().equals ("frameOutput")) {
            	                                         value.add (new FrameOutputOp (v2));
            	                                     } else {
            	    									throw new RuntimeException ("Parser: Got an undefined relational op!");
            	    								 }

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "parse"


    // $ANTLR start "varList"
    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:90:1: varList returns [Map <String, ParsedRHS> value] : '{' v1= varDef (v2= varDef )* '}' ;
    public final Map <String, ParsedRHS> varList() throws RecognitionException {
        Map <String, ParsedRHS> value = null;

        VarDefPair v1 = null;

        VarDefPair v2 = null;


        try {
            // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:91:2: ( '{' v1= varDef (v2= varDef )* '}' )
            // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:91:4: '{' v1= varDef (v2= varDef )* '}'
            {
            match(input,10,FOLLOW_10_in_varList93); 
            pushFollow(FOLLOW_varDef_in_varList97);
            v1=varDef();

            state._fsp--;

            value = new HashMap <String, ParsedRHS> ();
            								 value.put (v1.getKey (), v1.getValue ());
            // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:93:3: (v2= varDef )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==12||(LA2_0>=14 && LA2_0<=39)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:93:5: v2= varDef
            	    {
            	    pushFollow(FOLLOW_varDef_in_varList111);
            	    v2=varDef();

            	    state._fsp--;

            	    value.put (v2.getKey (), v2.getValue ());

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            match(input,11,FOLLOW_11_in_varList124); 

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return value;
    }
    // $ANTLR end "varList"


    // $ANTLR start "varDef"
    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:97:1: varDef returns [VarDefPair value] : ( 'leftInput' '=' rhs1= varList | 'rightInput' '=' rhs1= varList | 'input' '=' rhs1= varList | 'output' '=' rhs1= varList | 'operation' '=' '{' rhs2= Identifier '}' | 'inFiles' '=' '{' rhs3= stringList '}' | 'inAtts' '=' '{' rhs4= identifierList '}' | 'inTypes' '=' '{' rhs4= identifierList '}' | 'hashAtts' '=' '{' rhs4= identifierList '}' | 'typeCode' '=' '{' rhs5= Int '}' | 'selection' '=' '{' rhs6= exp '}' | 'outAtts' '=' '{' rhs7= assignmentList '}' | 'outFile' '=' '{' rhs8= String '}' | 'groupByAtts' '=' '{' rhs4= identifierList '}' | 'aggregates' '=' '{' rhs10= aggregateList '}' | 'outerInput' '=' rhs1= varList | 'innerInputs' '=' rhs11= innerInputList | 'seedAtt' '=' '{' rhs2= Identifier '}' | 'function' '=' rhs1= varList | 'functionName' '=' '{' rhs8= String '}' | 'vgInAtts' '=' '{' rhs4= identifierList '}' | 'vgOutAtts' '=' '{' rhs4= identifierList '}' | 'removeDuplicates' '=' '{' rhs12= Boolean '}' | 'isFinal' '=' '{' rhs12= Boolean '}' | 'sortedOn' '=' '{' rhs2= Identifier '}' | 'joinType' '=' '{' rhs2= Identifier '}' | 'rows' '=' '{' rhs13= rowList '}' );
    public final VarDefPair varDef() throws RecognitionException {
        VarDefPair value = null;

        Token rhs2=null;
        Token rhs5=null;
        Token rhs8=null;
        Token rhs12=null;
        Map <String, ParsedRHS> rhs1 = null;

        ArrayList <String> rhs3 = null;

        ArrayList <String> rhs4 = null;

        Expression rhs6 = null;

        ArrayList <Assignment> rhs7 = null;

        ArrayList<AggregateExp> rhs10 = null;

        Map<String,ParsedRHS> rhs11 = null;

        ArrayList<ArrayList<Expression>> rhs13 = null;


        try {
            // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:98:2: ( 'leftInput' '=' rhs1= varList | 'rightInput' '=' rhs1= varList | 'input' '=' rhs1= varList | 'output' '=' rhs1= varList | 'operation' '=' '{' rhs2= Identifier '}' | 'inFiles' '=' '{' rhs3= stringList '}' | 'inAtts' '=' '{' rhs4= identifierList '}' | 'inTypes' '=' '{' rhs4= identifierList '}' | 'hashAtts' '=' '{' rhs4= identifierList '}' | 'typeCode' '=' '{' rhs5= Int '}' | 'selection' '=' '{' rhs6= exp '}' | 'outAtts' '=' '{' rhs7= assignmentList '}' | 'outFile' '=' '{' rhs8= String '}' | 'groupByAtts' '=' '{' rhs4= identifierList '}' | 'aggregates' '=' '{' rhs10= aggregateList '}' | 'outerInput' '=' rhs1= varList | 'innerInputs' '=' rhs11= innerInputList | 'seedAtt' '=' '{' rhs2= Identifier '}' | 'function' '=' rhs1= varList | 'functionName' '=' '{' rhs8= String '}' | 'vgInAtts' '=' '{' rhs4= identifierList '}' | 'vgOutAtts' '=' '{' rhs4= identifierList '}' | 'removeDuplicates' '=' '{' rhs12= Boolean '}' | 'isFinal' '=' '{' rhs12= Boolean '}' | 'sortedOn' '=' '{' rhs2= Identifier '}' | 'joinType' '=' '{' rhs2= Identifier '}' | 'rows' '=' '{' rhs13= rowList '}' )
            int alt3=27;
            switch ( input.LA(1) ) {
            case 12:
                {
                alt3=1;
                }
                break;
            case 14:
                {
                alt3=2;
                }
                break;
            case 15:
                {
                alt3=3;
                }
                break;
            case 16:
                {
                alt3=4;
                }
                break;
            case 17:
                {
                alt3=5;
                }
                break;
            case 18:
                {
                alt3=6;
                }
                break;
            case 19:
                {
                alt3=7;
                }
                break;
            case 20:
                {
                alt3=8;
                }
                break;
            case 21:
                {
                alt3=9;
                }
                break;
            case 22:
                {
                alt3=10;
                }
                break;
            case 23:
                {
                alt3=11;
                }
                break;
            case 24:
                {
                alt3=12;
                }
                break;
            case 25:
                {
                alt3=13;
                }
                break;
            case 26:
                {
                alt3=14;
                }
                break;
            case 27:
                {
                alt3=15;
                }
                break;
            case 28:
                {
                alt3=16;
                }
                break;
            case 29:
                {
                alt3=17;
                }
                break;
            case 30:
                {
                alt3=18;
                }
                break;
            case 31:
                {
                alt3=19;
                }
                break;
            case 32:
                {
                alt3=20;
                }
                break;
            case 33:
                {
                alt3=21;
                }
                break;
            case 34:
                {
                alt3=22;
                }
                break;
            case 35:
                {
                alt3=23;
                }
                break;
            case 36:
                {
                alt3=24;
                }
                break;
            case 37:
                {
                alt3=25;
                }
                break;
            case 38:
                {
                alt3=26;
                }
                break;
            case 39:
                {
                alt3=27;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }

            switch (alt3) {
                case 1 :
                    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:98:4: 'leftInput' '=' rhs1= varList
                    {
                    match(input,12,FOLLOW_12_in_varDef139); 
                    match(input,13,FOLLOW_13_in_varDef142); 
                    pushFollow(FOLLOW_varList_in_varDef146);
                    rhs1=varList();

                    state._fsp--;

                    value = new VarDefPair ("leftInput", new VarListRHS (rhs1));

                    }
                    break;
                case 2 :
                    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:99:4: 'rightInput' '=' rhs1= varList
                    {
                    match(input,14,FOLLOW_14_in_varDef155); 
                    match(input,13,FOLLOW_13_in_varDef158); 
                    pushFollow(FOLLOW_varList_in_varDef162);
                    rhs1=varList();

                    state._fsp--;

                    value = new VarDefPair ("rightInput", new VarListRHS (rhs1));

                    }
                    break;
                case 3 :
                    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:100:4: 'input' '=' rhs1= varList
                    {
                    match(input,15,FOLLOW_15_in_varDef170); 
                    match(input,13,FOLLOW_13_in_varDef173); 
                    pushFollow(FOLLOW_varList_in_varDef177);
                    rhs1=varList();

                    state._fsp--;

                    value = new VarDefPair ("input", new VarListRHS (rhs1));

                    }
                    break;
                case 4 :
                    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:101:4: 'output' '=' rhs1= varList
                    {
                    match(input,16,FOLLOW_16_in_varDef186); 
                    match(input,13,FOLLOW_13_in_varDef189); 
                    pushFollow(FOLLOW_varList_in_varDef193);
                    rhs1=varList();

                    state._fsp--;

                    value = new VarDefPair ("output", new VarListRHS (rhs1));

                    }
                    break;
                case 5 :
                    // /home/dimitrije/git/v0.5/src/runtime/dataflow/DataFlow.g:102:4: 'operation' '=' '{' rhs2= Identifier '}'
                    {
                    match(input,17,FOLLOW_17_in_varDef202); 
                    match(input,13,FOLLOW_13_in_varDef208); 
                    match(input,10,FOLLOW_10_in_varDef210); 
                    rhs2=(Token)match(input,Identifier,FOLLOW_Identifier_in_varDef214); 
                    match(input,11,FOLLOW_11_in_varDef216); 
                    value = new VarDefPair ("operation", new IdentifierRHS ((rhs2!=null?rhs2.getText():null)));
